--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      <!-- Note: what does INTEGRITY mean? -->
      <!--- -->
 
-   <title>Issams fantasy page</title>
+   <title>Issams fantasy world page</title>
    <link rel="icon" type="image/x-icon" href="Website Dependancies/favicon/icons8-cup.gif">
    <!--  https://icons8.com/icon/set/kitchen/family-animated--animated, 20250116 -->
    <!-- Favicon is a Pathway and Image File, not from a server. Goes into computer. -->
@@ -34,11 +34,11 @@
   <!-- Portfolio Section -->
   <section>
     <div id="incomplete">
-      <h2>My Name is...</h2>
-      <h3>I'm in Grade...</h3>
+      <h2>my name is satoru gojo</h2>
+      <h3>i am in grade 17</h3>
     </div>
     <div id="incomplete">
-      <h4>My Interests Are:</h4>
+      <h4>My interests are gaming and being outdoors</h4>
         <ul>
           <li>My hobbies are...</li>
           <li>My Sports Are...</li>
