--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- Portfolio Section -->
   <section>
     <div id="incomplete">
-      <h2>my name is satoru gojo</h2>
+      <h2>my name is Satoru Gojo</h2>
       <h3>i am in grade 17</h3>
     </div>
     <div id="incomplete">
