--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       <h3>i am in grade 17</h3>
     </div>
     <div id="incomplete">
-      <h4>My interests are gaming and being outdoors</h4>
+      <h4>My interests are</h4>
         <ul>
-          <li>My hobbies are...</li>
+          <li>My hobbies are being outdoors</li>
           <li>My Sports Are...</li>
           <li>My Friends and Family Are...</li>
         </ul>
