--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   <!-- Portfolio Section -->
   <section>
     <div id="incomplete">
-      <h2>my name is Satoru Gojo</h2>
-      <h3>i am in grade 17</h3>
+      <h2>My Name is Satoru Gojo</h2>
+      <h3>I am a Special Grade</h3>
     </div>
     <div id="incomplete">
       <h4>My interests are</h4>
