--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      <!-- Note: what does INTEGRITY mean? -->
      <!--- -->
 
-   <title>Issam fantasy world page</title>
+   <title>Gojos Infinity World</title>
    <link rel="icon" type="image/x-icon" href="Website Dependancies/favicon/icons8-cup.gif">
    <!--  https://icons8.com/icon/set/kitchen/family-animated--animated, 20250116 -->
    <!-- Favicon is a Pathway and Image File, not from a server. Goes into computer. -->
@@ -28,7 +28,7 @@
 <body>
   
   <header id="incomplete">
-	 <h1>Personal Portfolio and Music Player Descriptions</h1>
+	 <h1>My Music Player</h1>
   </header>
 
   <!-- Portfolio Section -->
@@ -40,7 +40,7 @@
     <div id="incomplete">
       <h4>My interests are</h4>
         <ul>
-          <li>My hobbies are being outdoors</li>
+          <li>Being outdoors</li>
           <li>My Sports Are...</li>
           <li>My Friends and Family Are...</li>
         </ul>
