--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h4>My interests are</h4>
         <ul>
           <li>Being outdoors</li>
-          <li>My Favorite Sports are skiing and Soccer</li>
+          <li>Skiing and Soccer</li>
           <li>My Friends and Family Are...</li>
         </ul>
     </div>
