--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <ul>
           <li>Being outdoors</li>
           <li>Skiing and Soccer</li>
-          <li>My Friends and Family Are...</li>
+          <li>My Favorite food is chicken</li>
         </ul>
     </div>
   </section>
