--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      <!-- Note: what does INTEGRITY mean? -->
      <!--- -->
 
-   <title>Gojos Infinity World</title>
+   <title>Issams wonderland page</title>
    <link rel="icon" type="image/x-icon" href="Website Dependancies/favicon/icons8-cup.gif">
    <!--  https://icons8.com/icon/set/kitchen/family-animated--animated, 20250116 -->
    <!-- Favicon is a Pathway and Image File, not from a server. Goes into computer. -->
@@ -79,7 +79,7 @@
   </footer>
 
   <!-- Loading JavaScript Last: why some pages load and don't seem to 'work' -->
-  <script src='./script.js'></script>
+  <script src='Website Dependancies/script.js'></script>
 
 </body>
 <!--  -->
