--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
       <h3>I am a Special Grade</h3>
     </div>
     <div id="incomplete">
-      <h4>My interests are</h4>
+      <h4>My Favorite things to do are</h4>
         <ul>
           <li>Being outdoors</li>
           <li>Skiing and Soccer</li>
-          <li>My Favorite food is chicken</li>
+          <li>playing basketball</li>
         </ul>
     </div>
   </section>
