--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      <!-- Note: what does INTEGRITY mean? -->
      <!--- -->
 
-   <title>Issams wonderland page</title>
+   <title>Amorzinhos!!</title>
    <link rel="icon" type="image/x-icon" href="Website Dependancies/favicon/favicon.ico">
    <!--  https://icons8.com/icon/set/kitchen/family-animated--animated, 20250116 -->
    <!-- Favicon is a Pathway and Image File, not from a server. Goes into computer. -->
