--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div>
       <img src="https://queenelizabeth.epsb.ca/media/styleassets-schools/queenelizabeth/QueenE_T4_logo_white.png" alt="Case Study">
       <!-- Date Accessed: ??? -->
-      <img src="images/PXL\\fs-052\studuser$\Gr11\i.tarbine\Downloads\1000041687.jpg" alt="Repeat for more images">
+      <img src="images/PXL_1000041687.jpg" alt="Repeat for more images">
       <!-- Date Accessed: ??? -->
     </div>
     <div> 
