--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 <body>
   
   <header id="incomplete">
-	 <h1>My Music Player</h1>
+	 <h1>Satoru Gojo Music player</h1>
   </header>
 
   <!-- Portfolio Section -->
   <section>
     <div id="incomplete">
-      <h2>My Name is Satoru Gojo</h2>
+      <h2>My very cool name is Satoru Gojo</h2>
       <h3>I am a Special Grade</h3>
     </div>
     <div id="incomplete">
-      <h4>My Favorite things to do are</h4>
+      <h4>The things i do are</h4>
         <ul>
           <li>Being outdoors</li>
           <li>Skiing and Soccer</li>
