--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <!-- Date Accessed: ??? -->
     </div>
     <div> 
-      <p>"Describe this Case Study"</p>
+      <p>"This Image represents a Weather app, and there are some rainy clouds, Suns and clouds."</p>
       <p>"Use this space to describe any more images or case studies."</p>
     </div>
   </section>
