--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <!-- Video & YouTube API Section -->
   <section>
 	  <div> 
-      <p>Describe this Video and why it is important to building music players</p>
+      <p>This video is imprtant to my music player because it is a chill beat that I find is great as a backround music for my weather app</p>
     </div>
     <div>
       <!-- YouTube API, see SHARE -->
