--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <!-- Date Accessed: ??? -->
     </div>
     <div> 
-      <p>"This Image represents a Weather app Music player, and there are some Rainy Clouds, Suns and Clouds"</p>
+      <p>"This Image represents a Weather app Music player, and there are some Rainy Clouds, Suns and Clouds Which also describe what song it it, the artists name and who he is"</p>
       <p>"Use this space to describe any more images or case studies."</p>
     </div>
   </section>
