--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <section>
     <div id="incomplete">
       <h2>My very cool name is Satoru Gojo</h2>
-      <h3>I am a Special Grade</h3>
+      <h3>I am a toma</h3>
     </div>
     <div id="incomplete">
       <h4>The things i do are</h4>
